--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -32,7 +32,7 @@ modules-center =
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-bottom = true
+bottom = false
 
 [module/arch]
 type = custom/text
