--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'  # Sensible defaults for tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Save and restore tmux environment
 
 # Terminal settings
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g xterm-keys on
 
 # Key bindings for copy mode and navigation
 bind-key a copy-mode
