--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,15 +1,15 @@
 # vim:ft=kitty
-## name: Gruvbox Material Dark Soft
+## name: Gruvbox Material Dark Hard
 ## author: Sainnhe Park
 ## license: MIT
-## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-soft.conf
+## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-hard.conf
 ## blurb: A modified version of Gruvbox with softer contrasts
 
-background #32302f
+background #1d2021
 foreground #d4be98
 
 selection_background #d4be98
-selection_foreground #32302f
+selection_foreground #1d2021
 
 cursor #a89984
 cursor_text_color background
