--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_size 13
+font_size 12
 font_family      JetBrainsMono NF Medium
 bold_font        JetBrainsMono NF Medium
 italic_font      JetBrainsMono NF
@@ -13,6 +13,6 @@ map ctrl+shift+down nop
 confirm_os_window_close 0
  
 # BEGIN_KITTY_THEME
-# Gruvbox Material Dark Soft
+# Gruvbox Material Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
