--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,95 +1,92 @@
-# List of plugins managed by TPM (Tmux Plugin Manager)
-set -g @plugin 'tmux-plugins/tpm'        # TPM plugin manager
-set -g @plugin 'tmux-plugins/tmux-sensible'  # Sensible defaults for tmux
-set -g @plugin 'tmux-plugins/tmux-resurrect' # Save and restore tmux environment
+# Tmux Plugin Manager (TPM)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Set the prefix to Ctrl+s
+unbind C-s
+set -g prefix C-s
 
 # Terminal settings
 set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g xterm-keys on
 
+# New panes configuration
+unbind '"'
+bind o split-window -v -c "#{pane_current_path}"
+unbind %
+bind e split-window -h -c "#{pane_current_path}"
+bind-key v split-window -h
+bind-key b split-window
+
 # Key bindings for copy mode and navigation
 bind-key a copy-mode
 setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection-and-cancel
-bind -n M-H previous-window
-bind -n M-L next-window
 
-# Automatically set window titles based on the running program
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-
-# Enable mouse support in tmux
-set -g mouse on
-
-# Use Alt-arrow keys to switch panes without prefix key
+# Switch panes using Alt-arrow keys without prefix key
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Shift-arrow keys to switch windows
+# Switch windows using Shift-arrow keys
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
-# Reload tmux configuration with `prefix + r`
-unbind r
-bind r source-file ~/.tmux.conf
-
-# Set the prefix to Ctrl+s
-unbind C-s
-set -g prefix C-s
-
-# Start windows and panes at 1 instead of 0
-set -g base-index 1
-setw -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
-
-# Open new panes in the same directory as the current pane
-unbind '"'
-bind o split-window -v -c "#{pane_current_path}"
-unbind %
-bind e split-window -h -c "#{pane_current_path}"
-
-set -g @mainColor '#E45668'
-
-# Status bar settings
-set -g status on
-set-option -g status-style bg=default
-set -g status-fg #{@mainColor}  # Foreground color
-
-# Left side of the status bar
-set -g status-left-length 60
-set -g status-left '#[fg=colour231,bg=#{@mainColor}]   '
-
-# Right side of the status bar: session and hostname
-set -g status-right '#[fg=colour231,bg=#{@mainColor}]  #S #[fg=#{@mainColor},bg=colour235,nobold,nounderscore,noitalics] #[fg=colour231,bg=#{@mainColor}] 󰒋 #H #[fg=#{@mainColor},bg=colour235,nobold,nounderscore,noitalics]'
-
-# Window status format
-set -g window-status-format ' #I - #W '  # Format for inactive windows
-set -g window-status-current-format ' #[fg=colour231,bg=#{@mainColor}] #I-#W #[fg=#{@mainColor},bg=colour235,nobold,nounderscore,noitalics]'  # Format for the active window
-
-# Set pane border style for active pane
-set -g pane-border-fgs magenta
-set -g pane-active-border-fg green
-set -g pane-active-border-bg default
-
-# Set window status styles
-set -g window-status-style fg=terminal,bg=terminal
-set -g window-status-current-style fg=terminal,bg=terminal
-
-# Resize panes with Ctrl+s and arrow keys
+# Resize panes with Ctrl+Shift and arrow keys
 bind -n C-s-Left resize-pane -L 5
 bind -n C-s-Right resize-pane -R 5
 bind -n C-s-Up resize-pane -U 5
 bind -n C-s-Down resize-pane -D 5
-
 bind -n C-S-Left resize-pane -L 10
 bind -n C-S-Right resize-pane -R 10
 bind -n C-S-Up resize-pane -U 10
 bind -n C-S-Down resize-pane -D 10
 
-# Run TPM (Tmux Plugin Manager) to install plugins
+# Reload config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+
+# Create a new window with a custom name
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+
+# Use hjkl for pane traversal
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Set window split and base index
+set -g base-index 1
+setw -g aggressive-resize on
+
+# Status bar configuration
+# set-option -g status-position top
+set -g status-interval 1
+set -g status-justify centre
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '   #[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green,bg=default,bright]#(~/.config/polybar/scripts/get_spotify_status.sh) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
+# Colors and styles
+set-option -g status-style bg=colour235,fg=colour136
+set-window-option -g window-status-style fg=colour244,bg=default,dim
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour240
+set-option -g message-style bg=colour235,fg=colour166
+set-option -g display-panes-active-colour colour33
+set-option -g display-panes-colour colour166
+set-window-option -g clock-mode-colour green
+
+# Allows for faster key repetition
+set -s escape-time 50
+
+# Auto window rename
+set-window-option -g automatic-rename
+
+# Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
