--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,7 @@ set -g status-justify centre
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '   #[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(~/.config/polybar/scripts/get_spotify_status.sh) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green,bg=default,bright]#(~/.config/polybar/scripts/get_spotify_status.sh) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]#S'
 
 # Colors and styles
 set-option -g status-style bg=colour235,fg=colour136
