Chore : Change tmux statusline && alias for zsh.

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -38,6 +38,7 @@ read_only_style = "blue"
 home_symbol = "~"
 
 [git_status]
+ignore_submodules = true
 conflicted = "🏳"
 ahead = "🏎💨"
 behind = "😰"
