--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 font_size 12
-font_family      JetBrainsMono NF Medium
-bold_font        JetBrainsMono NF Medium
+font_family      JetBrainsMono NF
+bold_font        JetBrainsMono NF
 italic_font      JetBrainsMono NF
 bold_italic_font JetBrainsMono NF
 shell "tmux attach-session -t default || tmux new-session -s default"
@@ -13,6 +13,6 @@ map ctrl+shift+down nop
 confirm_os_window_close 0
  
 # BEGIN_KITTY_THEME
-# Gruvbox Material Dark Hard
+# VSCode_Dark
 include current-theme.conf
 # END_KITTY_THEME
