--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,6 @@ unbind C-s
 set -g prefix C-s
 
 # Terminal settings
-set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g xterm-keys on
 
@@ -19,6 +18,9 @@ unbind %
 bind e split-window -h -c "#{pane_current_path}"
 bind-key v split-window -h
 bind-key b split-window
+
+# Toggle Statusline with b key
+bind b set-option status
 
 # Key bindings for copy mode and navigation
 bind-key a copy-mode
@@ -49,6 +51,9 @@ bind -n C-S-Down resize-pane -D 10
 # Reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
+# Create a new session with a custom name
+bind S command-prompt -p "Session name: " "new-session -s '%%'"
+
 # Create a new window with a custom name
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
@@ -57,6 +62,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Enable mouse support
+setw -g mouse on
 
 # Set window split and base index
 set -g base-index 1
@@ -69,10 +77,10 @@ set -g status-justify centre
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '   #[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(~/.config/polybar/scripts/get_spotify_status.sh) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]#S'
+set -g status-right '#[fg=green,bg=default,bright]Spotify:#(~/.config/polybar/scripts/get_spotify_status.sh) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=blue]#S'
 
 # Colors and styles
-set-option -g status-style bg=colour235,fg=colour136
+set-option -g status-style bg=default,fg=colour136
 set-window-option -g window-status-style fg=colour244,bg=default,dim
 set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 set-option -g pane-border-style fg=colour235
