--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,11 +10,20 @@ bold_font        JetBrainsMono NF
 italic_font      JetBrainsMono NF
 bold_italic_font JetBrainsMono NF
 
-map ctrl+shift+t no
+# modify_font baseline 3
+# modify_font cell_width 92%
+# font_family      FiraCode Nerd Font
+# bold_font        FiraCode Nerd Font
+# italic_font      FiraCode Nerd Font
+# bold_italic_font FiraCode Nerd Font
+
+map ctrl+shift+t nop
+map ctrl+shift+n nop
 map ctrl+shift+left nop
 map ctrl+shift+right nop
 map ctrl+shift+up nop
 map ctrl+shift+down nop
 
+window_padding_width 0 3
+
 confirm_os_window_close 0
-shell "tmux attach-session -t default || tmux new-session -s default"
