--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,57 +1,3 @@
-shadow = false;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-inactive-opacity = 0.90;
-active-opacity = 0.95;
-frame-opacity = 1;
-inactive-opacity-override = false;
-opacity-rule = [
-  "80:class_g = 'kitty'",
-  "92:class_g *?= 'jetbrains'",
-  "95:class_g = 'discord'",
-  "100:class_g *?= 'google-chrome'",
-  "100:class_g *?= 'vlc'",
-  "100:class_g *?= 'bliss'",
-  "100:class_g *?= 'VirtualBox'",
-  "100:class_g *?= 'netflix'",
-  "100:class_g *?= 'firefox'",
-  "100:class_g *?= 'i3lock'",
-];
-
-
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
-
-blur: {
-        method = "dual_kawase";
-        strength = 3;
-      };
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "class_g = 'i3-frame'",
-  "class_g = 'polybar'",
-  "class_g = 'rofi'",
-  "class_g = 'Dunst'",
-  "window_type = 'notification'",
-  "window_type = 'tooltip'",
-  "window_type = 'popup_menu'",
-  "window_type = 'dropdown_menu'",
-  "window_type = 'utility'",
-  "window_type = 'dialog'",
-  "class_g = 'firefox' && window_type = 'dialog'"
-];
-
 corner-radius = 0
 backend = "glx";
 vsync = false;
@@ -63,22 +9,92 @@ detect-transient = true;
 use-damage = true;
 log-level = "warn";
 
+shadow = false;
+shadow-exclude = [
+  "class_g = 'Cairo-clock'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "name = 'Notification'",
+  "override_redirect = true",
+];
+
+inactive-opacity = 0.85;
+active-opacity = 0.95;
+frame-opacity = 1;
+inactive-opacity-override = false;
+opacity-rule = [
+  "85:class_g = 'kitty'",
+  "95:class_g *?= 'jetbrains'",
+  "95:class_g = 'discord'",
+  "100:class_g *?= 'resolve'",
+  "100:class_g *?= 'gwenview'",
+  "100:class_g *?= 'copyq'",
+  "100:class_g *?= 'google-chrome'",
+  "100:class_g *?= 'Emulator'",
+  "100:class_g *?= 'mpv'",
+  "100:class_g *?= 'brave'",
+  "100:class_g *?= 'okular'",
+  "100:class_g *?= 'vlc'",
+  "100:class_g *?= 'bliss'",
+  "100:class_g *?= 'VirtualBox'",
+  "100:class_g *?= 'netflix'",
+  "100:class_g *?= 'firefox'",
+  "100:class_g *?= 'zen'",
+  "100:class_g *?= 'i3lock'",
+  "100:class_g *?= 'pcsx2-qt'",
+];
+
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
+
+blur: {
+  method = "dual_kawase";
+  size = 6;
+  strength = 3;
+};
+blur-background = true
+blur-background-fixed = true
+
+blur-background-exclude = [
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "class_g = 'Dunst'",
+  "class_g = 'Dunst'",
+  "class_g = 'brave-browser'",
+  "class_g = 'firefox' && window_type = 'dialog'",
+  "class_g = 'i3-frame'",
+  "class_g = 'polybar'",
+  "class_g = 'rofi'",
+  "override_redirect = true",
+  "window_type = 'desktop'",
+  "window_type = 'dialog'",
+  "window_type = 'dock'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'notification'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
+  "window_type = 'utility'",
+];
+
 wintypes:
 {
   tooltip = { fade = true; shadow = false; opacity = 1; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; shadow = false }
-  dropdown_menu = { opacity = 1; shadow = false}
+  dock = { shadow = false; clip-shadow-above = false; };
+  dnd = { shadow = false; };
+  popup_menu = { opacity = 1; shadow = false };
+  dropdown_menu = { opacity = 1; shadow = false};
+  menu = { shadow = false; blur-background = false; };
 };
 
-# Picom Fork Transitions Settings
-transition = false;
-transition-offset = 20;
-transition-direction = "smart-x";
-transition-timing-function = "ease-out-cubic";
-transition-step = 0.028;
-transition-rule = [];
-fading = false;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+animations = (
+    {
+      triggers = [ "open", "show" ];
+      preset = "appear";
+      scale = 0.5;
+      duration = 0.1;
+    },
+    {
+      triggers = [ "close", "hide" ];
+      preset = "disappear";
+      scale = 0.5;
+      duration = 0.1;
+    },
+)
