--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,9 +7,14 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 unbind C-s
 set -g prefix C-s
 
-# Terminal settings
-set -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g xterm-keys on
+# Terminal settings with true color support
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",tmux-256color:Tc"
+
+set -g history-limit 5000
+
+# Enable xterm key bindings
+set-window-option -g xterm-keys on
 
 # New panes configuration
 unbind '"'
@@ -25,8 +30,9 @@ bind b set-option status
 # Key bindings for copy mode and navigation
 bind-key a copy-mode
 setw -g mode-keys vi
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
+# This is fucking working i dunno why just keep it for now
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+set -g copy-command 'xclip -sel clip -i'
 
 # Switch panes using Alt-arrow keys without prefix key
 bind -n M-Left select-pane -L
@@ -72,20 +78,20 @@ setw -g aggressive-resize on
 
 # Status bar configuration
 set -g status-interval 1
-set -g status-left-length 20
-set -g status-right-length 140
-set -g status-left '#[fg=red]   #[fg=green]#H #[fg=green]• '
-set -g status-right '#[fg=green,bg=default,bright]%A : %H:%M #[default]#[fg=blue]#S'
+set -g status-left-length 200
+set -g status-right-length 40
+set -g status-left '#[fg=red]   #[fg=green][#S] #[fg=green]• '
+set -g status-right '#[default]#[fg=blue]kraaakilo'
 
 # Colors and styles
 set-option -g status-style bg=default,fg=colour136
 set-window-option -g window-status-style fg=colour244,bg=default,dim
-set-window-option -g window-status-current-style fg=colour166,bg=default,bright
-set-option -g pane-border-style fg=colour235
-set-option -g pane-active-border-style fg=colour240
-set-option -g message-style bg=colour235,fg=colour166
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
+set-window-option -g window-status-current-style fg=#0B6DB3,bg=default,bright
+set-option -g pane-border-style "fg=#32344a"
+set-option -g pane-active-border-style "fg=#0B6DB3"
+set-option -g message-style "bg=#1a1b26,fg=#7dcfff"
+set-option -g display-panes-active-colour "#0B6DB3"
+set-option -g display-panes-colour "#7dcfff"
 set-window-option -g clock-mode-colour green
 
 # Windows Format
