--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -1,64 +1,50 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-  <!-- Apply text rasterization, hinting, and anti-aliasing -->
   <match target="font">
     <edit name="antialias" mode="assign">
       <bool>true</bool>
-      </edit>
-    <edit name="hinting" mode="assign">
-      <bool>true</bool>
-      </edit>
+    </edit>
     <edit name="rgba" mode="assign">
       <const>rgb</const>
-      </edit>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
     <edit name="hintstyle" mode="assign">
       <const>hintslight</const>
-      </edit>
+    </edit>
     <edit name="lcdfilter" mode="assign">
       <const>lcddefault</const>
-      </edit>
-    </match>
-  <alias>
-    <family>serif</family>
-    <prefer>
-      <family>Noto Serif</family>
-      <family>Noto Color Emoji</family>
-      <family>Noto Emoji</family>
-      </prefer>
-    </alias>
+    </edit>
+  </match>
+
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Noto Sans</family>
-      <family>Noto Color Emoji</family>
-      <family>Noto Emoji</family>
-      </prefer>
-    </alias>
+      <family>Roboto</family>
+      <family>DejaVu Sans</family>
+    </prefer>
+  </alias>
+
   <alias>
-    <family>sans</family>
+    <family>serif</family>
     <prefer>
-      <family>Noto Sans</family>
-      <family>Noto Color Emoji</family>
-      <family>Noto Emoji</family>
-      </prefer>
-    </alias>
-  <alias>
-    <family>monospace</family>
-    <prefer>
-      <family>JetBrains Mono</family>
-      <family>Noto Mono</family>
-      <family>Noto Color Emoji</family>
-      <family>Noto Emoji</family>
-      </prefer>
-    </alias>
+      <family>DejaVu Serif</family>
+    </prefer>
+  </alias>
+
   <alias>
     <family>mono</family>
     <prefer>
-      <family>JetBrains Mono</family>
-      <family>Noto Mono</family>
-      <family>Noto Color Emoji</family>
-      <family>Noto Emoji</family>
-      </prefer>
-    </alias>
-  </fontconfig>
+      <family>JetBrainsMono NF</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>monospace</family>
+    <prefer>
+      <family>JetBrainsMono NF</family>
+    </prefer>
+  </alias>
+</fontconfig>
