--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 	excludesFile = ~/.gitignore
 	autocrlf = input
 [user]
-	name = Mr TripleA
+	name = Marc-Elvis
 	email = kraaakilo@gmail.com
 [fetch]
 	prune = true
