--- a/gtk/.config/gtk-4.0/settings.ini
+++ b/gtk/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-font-name=Roboto 12
 gtk-theme-name=Arc-Dark
-gtk-icon-theme-name=Papirus-Dark
+gtk-icon-theme-name=Arc
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=16
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
