--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,57 +1,53 @@
 # vim:ft=kitty
-## name: VSCode_Dark
-## author: ported from Microsoft VSCode by huabeiyou
+
+## name: Adwaita dark
 ## license: MIT
-## blurb: the integrated terminal's default dark theme
+## author: Emil Löfquist (https://github.com/ewal)
+## upstream: https://github.com/ewal/kitty-adwaita/blob/main/adwaita_dark.conf
+## blurb: Adwaita dark - based on https://github.com/Mofiqul/adwaita.nvim
 
-# The basic colors
-foreground              #cccccc
-background              #1e1e1e
-selection_foreground    #cccccc
-selection_background    #264f78
+#background                 #000000
+background                #1A1A1D
+#background                #111827
+foreground                #deddda
 
-# Cursor colors
-cursor                  #ffffff
-cursor_text_color       #1e1e1e
+selection_background      #303030
+selection_foreground      #c0bfbc
 
-# kitty window border colors
-active_border_color     #e7e7e7
-inactive_border_color   #414140
+url_color                 #1a5fb4
 
-# Tab bar colors
-active_tab_foreground   #ffffff
-active_tab_background   #3a3d41
-inactive_tab_foreground #858485
-inactive_tab_background #1e1e1e
+wayland_titlebar_color    system
+macos_titlebar_color      system
 
-# black
-color0 #000000
-color8 #666666
+cursor                    #deddda
+cursor_text_color         #1d1d1d
 
-# red
-color1 #f14c4c
-color9 #cd3131
+active_border_color       #4f4f4f
+inactive_border_color     #282828
+bell_border_color         #ed333b
+visual_bell_color         none
 
-# green
-color2  #23d18b
-color10 #0dbc79
+active_tab_background     #242424 
+active_tab_foreground     #fcfcfc
+inactive_tab_background   #303030
+inactive_tab_foreground   #b0afac
+tab_bar_background        none
+tab_bar_margin_color      none
 
-# yellow
-color3  #f5f543
-color11 #e5e510
+color0                    #1d1d1d
+color1                    #ed333b
+color2                    #57e389
+color3                    #ff7800
+color4                    #62a0ea
+color5                    #9141ac
+color6                    #5bc8af
+color7                    #deddda
 
-# blue
-color4  #3b8eea
-color12 #2472c8
-
-# magenta
-color5  #d670d6
-color13 #bc3fbc
-
-# cyan
-color6  #29b8db
-color14 #11a8cd
-
-# white
-color7  #e5e5e5
-color15 #e5e5e5
+color8                    #9a9996
+color9                    #f66151
+color10                   #8ff0a4
+color11                   #ffa348
+color12                   #99c1f1
+color13                   #dc8add
+color14                   #93ddc2
+color15                   #f6f5f4
