--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -16,30 +16,21 @@ height = 20pt
 radius = 0
 dpi = 90
 background = #882F343F
-foreground = $FFFFFF
 line-size = 3pt
 border-size = 0pt
 border-color = #00000000
-padding-left = 1
-padding-right = 1
+padding-left = 2
+padding-right = 2
 module-margin = 2
 separator-foreground = ${colors.disabled}
-font-0 = "Roboto:size=12;1"
-font-1 = JetBrainsMono Nerd Font:size=11;1
+font-0 = Roboto:size=12;1
+font-1 = JetBrainsMono NF:size=11;1
 modules-left = i3workspaces
-modules-right = network spotify battery pulseaudio date microphone systray
-modules-center = 
+modules-right = battery network memory spotify pulseaudio date microphone systray
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
 bottom = false
-
-[module/arch]
-type = custom/text
-label = 
-format-margin = 3
-click-left = rofi -show drun
-click-right = wal -s -t --recursive -i $HOME/Pictures/wallpapers/favourites/
 
 [module/systray]
 type = internal/tray
@@ -63,7 +54,6 @@ type = internal/pulseaudio
 format-volume-prefix = "    "
 format-volume = <label-volume>
 click-right = pavucontrol
-click-middle=pulseaudio-control --node-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-node
 label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
@@ -83,7 +73,7 @@ type = internal/memory
 interval = 2
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = %used% / %total%
 
 [module/cpu]
 type = internal/cpu
@@ -112,8 +102,8 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 [module/date]
 type = internal/date
 interval = 1
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S (%A)
+date = %I:%M %p
+date-alt = %Y-%m-%d %I:%M:%S %p (%A)
 label = %date%
 
 [settings]
@@ -140,9 +130,9 @@ interval = 1
 format-prefix = "   "
 format-prefix-foreground = "#1db954"
 format = <label>
-exec = ~/.config/polybar/scripts/scroll_spotify_status.sh
+exec = ~/.config/polybar/scripts/get_spotify_status.sh
+click-left = i3-msg "[class="Spotify"] focus"
 click-right = playerctl play-pause -p spotify
-click-left = i3-msg "[class=\"Spotify\"] focus"
 scroll-down = playerctl previous -p spotify
 scroll-up = playerctl next -p spotify
 
@@ -193,13 +183,13 @@ enable-scroll = false
 wrapping-scroll = false
 reverse-scroll = false
 fuzzy-match = true
-label-focused = %index%
+label-focused = %name%
 label-focused-foreground = #ffffff
 label-focused-underline = ${colors.alert}
 label-focused-padding = 1
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = 1
-label-visible = %index%
+label-visible = %name%
 label-visible-underline = #555555
 label-visible-padding = 1
 label-urgent-foreground = #ffffff
@@ -208,7 +198,7 @@ label-urgent-padding = 1
 
 [module/network]
 type = internal/network
-interface-type = wired
+interface-type = ${env:IFACE_TYPE}
 interval = 1.0
 label-connected = "   %downspeed%    %upspeed%  "
 label-disconnected = disconnected
